[project]
name = "eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "python-levenshtein>=0.27.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.0.1",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.50.3",
]
